--- a/css/style.scss
+++ b/css/style.scss
@@ -1,9 +1,11 @@
 $dark-violet: rgb(12, 18, 44);
 $middle-violet: rgb(30, 44, 105);
+$height-containers: 25%;
 
 * {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 body {
@@ -11,10 +13,144 @@ body {
   height: 100vh;
   overflow: hidden;
   background: $dark-violet no-repeat bottom url(./images/bg-desktop.png);
+  background-size: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 30.5% 15vw 37.5%;
+  grid-gap: 20px;
 }
 
 p {
   color: white;
 }
 
+.options-container {
+  background: $middle-violet;
+  height: $height-containers;
+  grid-column: 3/6;
+  grid-row: 2/3;
+  height: 100%;
+  border-radius: 10px 80px 10px 10px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-left: 30px;
+  width: 88%;
+}
 
+.options-container-list-icons{
+    display: flex;
+    justify-content: space-between;
+    width: 153px;
+    height: 42px;
+}
+
+.options-container-list-icons__icon{
+    background-color: $dark-violet;
+    background-size: cover;
+    width: 42px;
+    display: flex;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.options-container-list-icons__icon > img{
+    margin: auto;
+    width: 45%;
+}
+
+.progression { 
+  border-radius: 10px 10px 10px 10px;  
+  height: $height-containers;
+  grid-column: 6/11;
+  grid-row: 2/3; 
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-rows: 1fr 5fr;
+  position: relative;
+}
+
+.progression__left{
+    grid-row: 1/2;
+    background-color: white;
+    color: $dark-violet;
+    width: 30%;
+    position: absolute;
+    right: 5%;
+    height: 180%;
+    display: flex;
+    border-radius: 12px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.progression__left::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -17px;
+    width: 0;
+    height: 0;
+    border-right: solid 30px white;
+    border-top: solid 18px transparent;
+    border-bottom: solid 18px transparent;
+}
+
+.progression__left__int{
+    font-size: 2.3em;
+    margin-top: 5px;
+}
+
+.progression__left__unity{
+    margin-top: 5px;
+    font-size: .6em;
+    color: rgba(100, 100, 100, .5);
+}
+
+.progression__infos{
+    grid-row: 2/7;
+    background: $middle-violet;
+    border-radius: 10px;
+    padding: 6%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: .8em;
+}
+
+.progression__infos__barre{
+    height: 1.4vw;
+    border-radius: 10px;
+    background: $dark-violet;
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.progression__infos__barre__gradient{
+    height: 1.2vw;
+    width: 80.5%;
+    border-radius: 10px;
+    background: linear-gradient(90deg, rgba(255,171,139,1) 31%, rgba(255,0,127,1) 100%); 
+    margin-left: 2px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.progression__infos__barre__gradient__balle{
+    background: white;
+    width: .9vw;
+    height: .9vw;
+    border-radius: 50%;
+    margin-right: 2px;
+}
+
+.progression__infos__memory{
+    display: flex;
+    justify-content: space-between;
+}
